<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="player_dialog_lyrics">Lyrics</string>
    <string name="player_dialog_ok">Ok</string>
    <string name="player_lyrycs_error">This track have no lyrics on vk</string>
    <string name="player_prev_short_not">PREV</string>
    <string name="player_next_short_not">NEXT</string>
    <string name="player_play_short_not">PLAY</string>
    <string name="player_pause_short_not">PAUSE</string>
    <string name="player_of">of</string>
    <string name="player_error">An error occurred during try to play this track</string>
    <string name="player_now">Now playing:</string>
    
    <string name="preferences_dialog_log_out">Log out</string>
    <string name="preferences_dialog_are_you_sure_logout">Are you sure want to logout?</string>
    <string name="preferences_dialog_yes">Yes</string>
    <string name="preferences_dialog_no">No</string>
    
    <string name="preferences_dialog_download_directory">Download directory</string>
    <string name="preferences_dialog_ok">Ok</string>
    <string name="preferences_dialog_cancel">Cancel</string>
    
    <string name="preferences_base">Base</string>
    <string name="preferences_download_directory">Download directory</string>
    <string name="preferences_download_directory_unavailable">This download directory is unavailable for this app.</string>
    <string name="preferences_stop_download">Stop downloading</string>
    <string name="preferences_stop_download_success">Download service has been successfully stoped.</string>
    <string name="preferences_account">Account</string>
    <string name="preferences_account_logout">Log out</string>
    <string name="preferences_checking_prep">Please wait, checking your premium status…</string>
    <string name="preferences_prep_ok">Successfully activated premium</string>
    <string name="preferences_prep_notok">You have no premium or it is expired</string>
    
    <string name="download_default_folder_name">VK_Music_Sync</string>
    <string name="download_folder_is_unavailable">Download folder is unavailable, check your sdcard.</string>
    <string name="download_rightholders_error">VK has deleted %s from public access</string>
    <string name="download_unhangled_error">Unhandled error with downloading</string>
    <string name="download_no_free_space">Not enough space to download</string>
    <string name="download_downloading">Downloading…, left [%s]</string>
    <string name="download_stop">Stop download</string>

    <string name="app_name">VK Music Sync</string>
    <string name="app_version">0.6 Release Candidate 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_activity_authorization">Authoriziation</string>
    <string name="login_activity_username">email or phone number</string>
    <string name="login_activity_password">password</string>
    <string name="login_activity_login">Log in</string>
    <string name="login_activity_wait">Logining in…</string>
    <string name="login_activity_error">Error. Check your connection to vk.com.</string>
    <string name="login_activity_wrong">Username or password is incorrect.</string>
    <string name="login_activity_captcha">Please enter captcha.</string>
    <string name="login_activity_redirect">VK redirected to this page.</string>
    <string name="login_activity_apply">Ok</string>
    <string name="login_activity_cancel">Cancel</string>
    
    <string name="content_activity_search">Search</string>
    <string name="content_activity_search_hint">artist, title, year, ost …</string>
    <string name="content_activity_wall">From wall</string>
    <string name="content_activity_albums">Albums</string>
    <string name="content_activity_recommendations">Recommendations</string>
    
    <string name="content_activity_access_to_users_audio_denied">User has restricted access to this page.\nTry to check wall.</string>
    <string name="content_activity_group_audio_is_disabled">Group audio is disabled.\nTry to check wall.</string>
    <string name="content_activity_empty_audio_list">There is no audio.</string>
    <string name="content_activity_error">An error occurred.\nTry to check your connection to vk.com.</string>
    <string name="content_activity_error_info">You can update this list by pulling blank space</string>
    <string name="content_activity_no_search_request">Enter search request.</string>
    <string name="content_activity_page_deactivated">Unfortunately this page is unavailable.</string>
    <string name="content_activity_no_friends">You have no friends.</string>
    <string name="content_activity_no_groups">You are not a member of any group.</string>
    <string name="content_activity_no_albums">There is no albums.</string>
    
    <string name="content_activity_error_on_adding_to_owner_list">An error occurred on adding: %s, to your own list.</string>
    <string name="content_activity_error_on_remove_from_owner_list">An error occurred on remove: %s, from your own list.</string>
    
    <string-array name="menu">
        <item >Chapters</item>
        <item >My music</item>
        <item >Search</item>
        <item >Popular</item>
        <item >Recommendations</item>
        <item >My friends</item>
        <item >My groups</item>
        <item >Downloaded</item>
        <item >Application</item>
        <item >Settings</item>
    </string-array>
    
    

</resources>
