<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:holo="http://schemas.android.com/apk/res-auto" >

    <Preference
        android:icon="@drawable/ic_launcher"
        android:summary="@string/app_version"
        android:selectable="false"
        android:title="@string/app_name" />

    <PreferenceCategory android:title="@string/preferences_base" >
        <Preference
            android:key="preferences:download_directory"
            android:title="@string/preferences_download_directory" /> 
        <Preference
            android:key="preference:stop_download"
            android:title="@string/preferences_stop_download" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_account" >
        <Preference
            android:key="preference:logout"
            android:title="@string/preferences_account_logout" />
    </PreferenceCategory>

</PreferenceScreen>