<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_solid_color"
    android:orientation="vertical"
    android:padding="13dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_preferences_logout" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:lines="1"
            android:ellipsize="end"
            android:layout_toRightOf="@+id/icon"
            android:text="@string/preferences_dialog_log_out"
            android:singleLine="true"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >
        <TextView
                android:id="@+id/summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:paddingRight="15dp"
                android:paddingTop="15dp"
                android:text="@string/preferences_dialog_are_you_sure_logout"
                android:autoLink="web"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white_color"
                android:textSize="16sp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_dialog_btn"
            android:padding="5dp"
            android:text="@string/preferences_dialog_yes"
            android:textColor="@color/white_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/apply"
            android:background="@drawable/ic_dialog_btn"
            android:padding="5dp"
            android:text="@string/preferences_dialog_no"
            android:textColor="@color/white_color"
            android:textSize="16sp"/>
    </RelativeLayout>

</LinearLayout>