<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_solid_color"
    android:orientation="vertical"
    android:padding="13dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_slider_downloads" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon"
            android:text="@string/preferences_dialog_download_directory"
            android:singleLine="true"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >
        <EditText
            android:id="@+id/edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:imeOptions="actionGo"
            android:textColor="@color/white_color"
            android:textSize="15sp"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_dialog_btn"
            android:padding="5dp"
            android:text="@string/preferences_dialog_ok"
            android:textColor="@color/white_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/apply"
            android:background="@drawable/ic_dialog_btn"
            android:padding="5dp"
            android:text="@string/preferences_dialog_cancel"
            android:textColor="@color/white_color"
            android:textSize="16sp"/>
    </RelativeLayout>

</LinearLayout>