<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_solid_color"
    android:orientation="vertical"
    android:padding="13dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon"
            android:text="@string/login_activity_captcha"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp" >

        <ImageView
            android:id="@+id/captcha_image"
            android:layout_width="173dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/nopic" />

        <EditText
            android:id="@+id/captcha_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:imeOptions="actionGo"
            android:inputType="text" >
        </EditText>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:background="@drawable/ic_intro_btn"
            android:paddingLeft="26dp"
            android:paddingRight="40dp"
            android:text="@string/login_activity_apply"
            android:textColor="@color/white_color"
            android:textSize="17sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/apply"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/ic_intro_btn"
            android:paddingLeft="26dp"
            android:paddingRight="40dp"
            android:text="@string/login_activity_cancel"
            android:textColor="@color/white_color"
            android:textSize="17sp" />
    </RelativeLayout>

</LinearLayout>