<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_solid_color"
    android:orientation="vertical"
    android:padding="13dp" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:src="@drawable/ic_music_lyrics_text" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/icon"
            android:singleLine="true"
            android:text="@string/player_dialog_lyrics"
            android:textColor="@color/white_color"
            android:textSize="18sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8"
        android:orientation="vertical"
        android:padding="5dp" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/summary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:paddingBottom="@dimen/activity_horizontal_margin_main"
                    android:paddingLeft="@dimen/activity_horizontal_margin_main"
                    android:paddingRight="@dimen/activity_horizontal_margin_main"
                    android:paddingTop="@dimen/activity_horizontal_margin_main"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white_color"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
         android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" >

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/ic_dialog_btn"
            android:padding="5dp"
            android:text="@string/player_dialog_ok"
            android:textColor="@color/white_color"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/apply"
            android:background="@drawable/ic_dialog_btn"
            android:padding="5dp"
            android:text="@string/preferences_dialog_no"
            android:textColor="@color/white_color"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>

</LinearLayout>