<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ab_solid_color"
    android:paddingBottom="@dimen/activity_horizontal_margin_main"
    android:paddingLeft="@dimen/activity_horizontal_margin_main"
    android:paddingRight="@dimen/activity_horizontal_margin_main"
    android:paddingTop="@dimen/activity_horizontal_margin_main"
    tools:context="com.BBsRs.vkmusicsyncvol2.LoginActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textMaskName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username"
            android:layout_alignLeft="@+id/username"
            android:layout_alignRight="@+id/username"
            android:layout_alignTop="@+id/username"
            android:background="@drawable/edit_text_holo_light"
            android:gravity="center_vertical"
            android:text="@string/login_activity_username"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/white_color"
            android:textSize="15sp" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/relativeLayout1"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textMaskPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/password"
            android:layout_alignLeft="@+id/password"
            android:layout_alignRight="@+id/password"
            android:layout_alignTop="@+id/password"
            android:background="@drawable/edit_text_holo_light"
            android:gravity="center_vertical"
            android:text="@string/login_activity_password"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/gray_color"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionGo"
            android:inputType="textPassword"
            android:textColor="@color/white_color"
            android:textSize="15sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/relativeLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_intro_btn"
        android:paddingLeft="26dp"
        android:paddingRight="40dp"
        android:text="@string/login_activity_login"
        android:textColor="@color/white_color"
        android:textSize="17sp" />

</RelativeLayout>