<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/albumsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_list_selector_holo_light"
        android:orientation="vertical"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="13dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="13dp" >

            <TextView
                android:id="@+id/albums"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/content_activity_albums"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_two_color"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_arrow_additional_lists" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_below="@+id/content"
            android:scaleType="fitXY"
            android:src="@color/gray_four_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wallLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_list_selector_holo_light"
        android:orientation="vertical"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="13dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp" >

            <TextView
                android:id="@+id/wall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/content_activity_wall"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_two_color"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_arrow_additional_lists" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_below="@+id/content"
            android:scaleType="fitXY"
            android:src="@color/gray_four_color" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/recommendationsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/purple_list_selector_holo_light"
        android:orientation="vertical"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="13dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp" >

            <TextView
                android:id="@+id/recc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:lines="1"
                android:singleLine="true"
                android:text="@string/content_activity_recommendations"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/gray_two_color"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="3dp"
                android:src="@drawable/ic_arrow_additional_lists" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:layout_below="@+id/content"
            android:scaleType="fitXY"
            android:src="@color/gray_four_color" />
    </LinearLayout>

</LinearLayout>